--- a/example/index.html
+++ b/example/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Image Carousel</title>
     <script src="index.js" type="module"></script>
-    <link rel="stylesheet" href="./quick-carousel.css" />
+    <link rel="stylesheet" href="../dist/quick-carousel.css" />
 </head>
 <body>
-    Hello World
+    Hello World <a href="#" id="show_anchor">Show Gallery</a>
 
 </body>
 
